fix: configurações de CORS para conexão com api.